--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,14 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="all_videos">All Videos</string>
     <string name="all_folders">Folders</string>
+    <string name="drawer_open">Open</string>
+    <string name="drawer_close">Close</string>
+    <string name="themes">Themes</string>
+    <string name="sort_by">Sort By</string>
+    <string name="feedback">Feedback</string>
+    <string name="about">About</string>
+    <string name="tagline">Your one and only media player</string>
+    <string name="video_title">Video title</string>
+    <string name="folder_name">Folder name</string>
+    <string name="_00_00">00:00</string>
 </resources>
