--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="video_title">Video title</string>
     <string name="folder_name">Folder name</string>
     <string name="_00_00">00:00</string>
+    <string name="total_videos">Total Videos</string>
+    <string name="image">Image</string>
 </resources>
