--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="_00_00">00:00</string>
     <string name="total_videos">Total Videos</string>
     <string name="image">Image</string>
+    <string name="folder123">folder123</string>
 </resources>
