--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Video Player</string>
     <!-- TODO: Remove or change this placeholder text -->
+    <string name="testing_text">Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="all_videos">All Videos</string>
     <string name="all_folders">Folders</string>
@@ -15,7 +16,7 @@
     <string name="folder_name">Folder name</string>
     <string name="_00_00">00:00</string>
     <string name="total_videos">Total Videos</string>
-    <string name="image">Image</string>
+    <string name="image">Thumbnail image</string>
     <string name="folder123">folder123</string>
     <string name="forward_slash">/</string>
     <string name="video_lock_close">Video lock close</string>
